[gd_scene load_steps=7 format=2]

[ext_resource path="res://Button.gd" type="Script" id=1]
[ext_resource path="res://Assets/more fonts/KiriFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://WinMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 54
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[node name="WinMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 2.37842
margin_top = -1.18921
margin_right = 1026.38
margin_bottom = 598.811
color = Color( 0.964706, 0.713726, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 221.0
margin_top = 72.0
margin_right = 799.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
text = "You Won!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="."]
margin_left = 308.653
margin_top = 394.839
margin_right = 695.653
margin_bottom = 541.839
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0588235, 0.807843, 0.94902, 1 )
custom_colors/font_color_hover = Color( 0.0823529, 0.364706, 0.894118, 1 )
custom_colors/font_color_pressed = Color( 0.0588235, 0.807843, 0.94902, 1 )
text = "Back to Main Menu"
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
margin_left = 319.231
margin_top = 223.053
margin_right = 683.231
margin_bottom = 360.053
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0588235, 0.807843, 0.94902, 1 )
custom_colors/font_color_hover = Color( 0.0823529, 0.364706, 0.894118, 1 )
custom_colors/font_color_pressed = Color( 0.0588235, 0.807843, 0.94902, 1 )
text = "Next Level!"
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainMenu" to="MainMenu" method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Next" to="Next" method="_on_Next_pressed"]
